<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    android:elevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_view_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/app_logo_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:minWidth="20dp"
                android:minHeight="20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo_atg_app"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <EditText
                android:id="@+id/search_item_view"
                android:layout_width="240dp"
                android:layout_height="28dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/search_background"
                android:drawableStart="@drawable/ic_search_icon"
                android:hint="@string/search_for_interest_groups"
                android:iconifiedByDefault="false"
                android:inputType="text"
                android:paddingStart="6dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/app_logo_image"
                app:layout_constraintStart_toEndOf="@id/app_logo_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:minWidth="20dp"
                android:minHeight="20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_email_icon"
                app:layout_constraintStart_toEndOf="@id/search_item_view"
                app:layout_constraintBottom_toBottomOf="@id/search_item_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chevron_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGray"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/search_view_constraint_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/article_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:minWidth="20dp"
                android:minHeight="20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/article_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/from_constraint_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/article_image"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/hand_writing_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:minWidth="30dp"
                    android:minHeight="30dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/writing_hand_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/article_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="6dp"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/articles"
                    app:layout_constraintStart_toEndOf="@id/hand_writing_image"
                    app:layout_constraintBottom_toBottomOf="@id/hand_writing_image"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/from_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:text="@string/from"
                    app:layout_constraintStart_toEndOf="@id/article_text_view"
                    app:layout_constraintBottom_toBottomOf="@id/article_text_view"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/page_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/purple_500"
                    android:layout_marginStart="4dp"
                    android:text="@string/paediatrics"
                    app:layout_constraintStart_toEndOf="@id/from_text_view"
                    app:layout_constraintBottom_toBottomOf="@id/from_text_view"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/other_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"
                    android:layout_marginStart="4dp"
                    android:text="@string/_2_others"
                    app:layout_constraintStart_toEndOf="@id/page_text_view"
                    app:layout_constraintBottom_toBottomOf="@id/page_text_view"
                    app:layout_constraintTop_toTopOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/chevron_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:minWidth="20dp"
                android:minHeight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_chevron_right_icon"
                app:layout_constraintStart_toEndOf="@id/from_constraint_layout"
                app:layout_constraintBottom_toBottomOf="@id/from_constraint_layout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.Toolbar>